# Project-Echo

./: .gitignore  Augmentation with SpecAugment.ipynb  CNN_birds_classification_01_(1).ipynb  DEPLOY_GKE_FIX.md  DEPLOY_TO_REMOTE_SERVER.md  Docker  Dockerfile  EK.ipynb  Finalize_the_Benchmarking_and_Experimentation_Suite_task.ipynb  HMI_style.css  INSTALL.md  Individual_Retrospective.md  Kunal_anand_s224704431_Benchmarking_framework.py  LOGIN_FIX_GUIDE.md  Literature Review Summary.docx  Microphone Network Simulation for Animal Vocalization Detection.ipynb  Project_echo_Ensem_Learn.ipynb  Project_echo_ensemble.ipynb  QUICK_FIX_GUIDE.md  README.md  README_SPRINT2_AUGMENTATION.md  Readme.md  SECRET_MANAGEMENT.md  SPRINT_TASKS.md  STATIC_IP_FIX.md  Sprint2_Augmentation_KD.ipynb  StatPageStyles.css  SubmissionOverview.html  SubmissionOverview.jsx  Test.txt  Weather_Detection_Spectoral_Centroid.ipynb  _imaging.cp39-win_amd64.pyd  _imagingcms.cp39-win_amd64.pyd  _imagingft.cp39-win_amd64.pyd  _imagingmath.cp39-win_amd64.pyd  _imagingmorph.cp39-win_amd64.pyd  _imagingtk.cp39-win_amd64.pyd  _webp.cp39-win_amd64.pyd  add-project.html  adminTest.routes.js  (+69 more)
src/Prototypes/engine/torch_impl/: Deepkaran_Sprint2_Task4_Dataset_Readiness_Colab.ipynb  Knowledge_Distilation_With_QAT.ipynb  Kunal_anand_sprint2_s224704431_echo_engine.py  Manaswini_ALA_Label_Mapping_Validation_Colab.ipynb  _single.py  augment.py  b3.joblib  benchmark_server.py  convert_onnx_to_tflite.py  data_analysis.py  dataset.py  demo_iot.py  deploy_model.py  export_cnn14_onnx.py  export_efficientnetv2_onnx.py  filter_noise.sh  light_echo_credentials.json  light_echo_engine.json  light_echo_engine.py  light_echo_engine_efficientnetv2_tflite.py  light_engine.Dockerfile  main.py  models.py  operator_test.py  pyproject.toml  pytorch_to_onnx.py  quant.py  requirements.txt  test_audio_preprocess.py  test_tflite_models.py  tmp.py  train.py  validate_models.py  validating_audio_file.py
src/Prototypes/engine/torch_impl/Integrate_EfficientNetV2_Engine/: README_EfficientNetV2_Engine_Integration.md  convert_saved_efficientnetv2_onnx_to_tflite.py  efficientnetv2_dataset_validation_results.csv  efficientnetv2_json_inference_result.json  efficientnetv2_mqtt_message_handler_result.json  test.ipynb  (+10 more)
(+7877 files in other folders)
