[project]
name = "torch-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ai-edge-litert",
    "audiomentations>=0.42.0",
    "diskcache>=5.6.3",
    "gradio>=6.3.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "liger-kernel>=0.6.4",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.5",
    "numpy>=2.2",
    "omegaconf>=2.3.0",
    "onnx<=1.19.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.18.9",
    "onnxscript>=0.5.7",
    "pandas>=2.3.1",
    "ruff>=0.14.13",
    "sng4onnx",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorboardx>=2.6.4",
    "tensorflow>=2.16",
    "torch>=2.0.1,<2.9",
    "torchcodec>=0.9.1",
    "torchvision>=0.15.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "onnx-simplifier>=0.4.36",
    "onnxruntime",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.0.0,<2.9",
    "onnx-tf>=1.10.0",
    "tf-keras>=2.20.1",
    "scipy>=1.15.3",
]


[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "tab"
